# GoldPredict_V2

./: .env.example  .gitignore  @AutomationLog.txt  ENVIRONMENT_SETUP_V2.md  ERROR_SUMMARY_REPORT.md  PACKAGING_VERIFICATION_REPORT.md  README.md  REPOSITORY_README.md  V2_ENVIRONMENT_UPDATE_SUMMARY.md  adaptive_prediction_engine.py  auto_trading_system.py  auto_trading_web_interface.py  build_executable_v2.py  build_standalone_exe.py  cpu_optimized_prediction.py  demo_wechat_prediction_system.py  enhanced_ai_prediction_system.py  enhanced_ai_web_interface.py  enhanced_ai_web_interface_fixed.py  enhanced_prediction_monitor.py  enhanced_web_interface.py  fast_realtime_demo.py  fix_dependencies.py  improved_mt5_manager.py  install.py  integration_test.py  lightweight_prediction.py  listener_config.json  main.py  minimal_test.py  mt5_data_source.py  multicore_prediction_system.py  predict.py  prediction_listener.py  pyproject.toml  quick_realtime_test.py  realtime_prediction_engine.py  realtime_web_controller.py  requirements.txt  simple_enhanced_web.py  (+27 more)
config/: config.yaml  trading.yaml  wechat.json
configs/: api_config.json  enhanced_ai_config.json  enhanced_config.json  prediction_config.json  rtx40_config.json  rtx40_optimized.json  rtx50_config.json
data/: README.md  latest_gold_data.csv
examples/: demo_prediction.py  quick_start.py
modules/: __init__.py  advanced_technical_indicators.py  deep_learning_models.py  gpu_accelerated_computing.py  market_sentiment_analysis.py
results/: auto_trading.db  listener_history.db  unified_data.db
results/data/: latest_gold_data.csv  mt5_gold_data.csv
results/realtime/: latest_prediction.json  predictions.db  simple_predictions.db
src/models/: __init__.py
src/visualization/: __init__.py
templates/: enhanced_prediction.html  index.html  realtime_prediction.html
